adding library functions

--- a/notebooks/01_collection.ipynb
+++ b/notebooks/01_collection.ipynb
@@ -29,6 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from library import *\n",
+    "\n",
     "import csv\n",
     "import json\n",
     "import numpy as np\n",
@@ -345,14 +347,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confident_list = []\n",
-    "for artist in artist_list_td:\n",
-    "    artist_list = sp.search(artist, type='artist')\n",
-    "    try:\n",
-    "        confident_list.append(artist_list['artists']['items'][0])\n",
-    "    except:\n",
-    "        confident_list.append('no_results')\n",
-    "    time.sleep(1)"
+    "def conf_results(artist_list):\n",
+    "    '''\n",
+    "    Parses through spotify search results to retrieve the `artist_id` of the first \n",
+    "    result of each search.\n",
+    "    '''\n",
+    "    confident_list = []\n",
+    "    for artist in artist_list:\n",
+    "        results = sp.search(artist, type='artist')\n",
+    "        try:\n",
+    "            confident_list.append(results['artists']['items'][0])\n",
+    "        except:\n",
+    "            confident_list.append('no_results')\n",
+    "        time.sleep(1)\n",
+    "    return confident_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confident_list = conf_results(artist_list_td)"
    ]
   },
   {
@@ -504,11 +521,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "missing_artists = []\n",
-    "\n",
-    "for i in list(enumerate(confident_list)):\n",
-    "    if i[1] == 'no_results':\n",
-    "        missing_artists.append((i[0], artist_list_td[i[0]]))"
+    "def miss_art(conf_list):\n",
+    "    '''\n",
+    "    Iterate through `confident_list` for any artists that weren't retrieved during the lists' creation\n",
+    "    '''\n",
+    "    missing_artists = []\n",
+    "    for i in list(enumerate(confident_list)):\n",
+    "        if i[1] == 'no_results':\n",
+    "            missing_artists.append((i[0], artist_list_td[i[0]]))\n",
+    "    return missing_artists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_artists = miss_art(confident_list)"
    ]
   },
   {
@@ -635,14 +665,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "found_artists = []\n",
-    "for artist in mal:\n",
-    "    artist_list = sp.search(artist[1], type='artist')\n",
-    "    try:\n",
-    "        found_artists.append(artist_list['artists']['items'][0])\n",
-    "    except:\n",
-    "        found_artists.append('no_results')\n",
-    "    time.sleep(0.5)"
+    "def found_art(missing_artists):\n",
+    "    '''\n",
+    "    Iterating through `missing_artists`, and retrieving artist information for each observation.\n",
+    "    '''\n",
+    "    found_artists = []\n",
+    "    for artist in missing_artists:\n",
+    "        artist_list = sp.search(artist[1], type='artist')\n",
+    "        try:\n",
+    "            found_artists.append(artist_list['artists']['items'][0])\n",
+    "        except:\n",
+    "            found_artists.append('no_results')\n",
+    "        time.sleep(0.5)\n",
+    "    return found_artists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "found_artists = found_art(missing_artists)"
    ]
   },
   {
@@ -1357,14 +1401,14 @@
     "           'href':'https://api.spotify.com/v1/artists/7iUhmKPNkkPPS6FCQxqtNq',\n",
     "           'id':'7iUhmKPNkkPPS6FCQxqtNq',\n",
     "           'images':[{'height': 640,\n",
-    "   'url': 'https://i.scdn.co/image/fafd121594231b770a47e6cdd893e2992d672c33',\n",
-    "   'width': 640},\n",
-    "  {'height': 300,\n",
-    "   'url': 'https://i.scdn.co/image/0c56c95a331fc161b7e0b6147574d914b840db16',\n",
-    "   'width': 300},\n",
-    "  {'height': 64,\n",
-    "   'url': 'https://i.scdn.co/image/72f790df70c1d7c3bf5098de019db0e6576865e3',\n",
-    "   'width': 64}],\n",
+    "           'url': 'https://i.scdn.co/image/fafd121594231b770a47e6cdd893e2992d672c33',\n",
+    "           'width': 640},\n",
+    "          {'height': 300,\n",
+    "           'url': 'https://i.scdn.co/image/0c56c95a331fc161b7e0b6147574d914b840db16',\n",
+    "           'width': 300},\n",
+    "          {'height': 64,\n",
+    "           'url': 'https://i.scdn.co/image/72f790df70c1d7c3bf5098de019db0e6576865e3',\n",
+    "           'width': 64}],\n",
     "           'name':'8Ball & MJG',\n",
     "           'popularity':49,\n",
     "           'type':'artist',\n",
@@ -1849,14 +1893,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_list = []\n",
+    "def top_10(artist_ids):\n",
+    "    '''\n",
+    "    Retrieves top 10 most popular tracks on Spotify for the artists specified in the `artist_ids` listing. \n",
+    "    '''\n",
+    "    top_10s = []\n",
     "\n",
-    "for aid in df['id']:\n",
-    "    try:\n",
-    "        song_list.append(sp.artist_top_tracks(aid))\n",
-    "    except:\n",
-    "        song_list.append('no_results')\n",
-    "    time.sleep(1)"
+    "    for aid in artist_ids:\n",
+    "        try:\n",
+    "            top_10s.append(sp.artist_top_tracks(aid))\n",
+    "        except:\n",
+    "            top_10s.append('no_results')\n",
+    "        time.sleep(1)\n",
+    "    return top_10s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_list = top_10(df['id'])"
    ]
   },
   {
@@ -1926,16 +1984,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_song_list = []\n",
+    "def song_feat_pull(song_list):\n",
+    "    '''\n",
+    "    Pulls modeling features of songs and outputs them into a separate list.\n",
+    "    '''\n",
+    "    master_song_list = []\n",
     "\n",
-    "for entry in song_list:\n",
-    "    if isinstance(entry, dict):\n",
-    "        for track in entry['tracks']:\n",
-    "            master_song_list.append({'song_id':track['id'], 'song_title':track['name'],\n",
-    "                                     'artist_id':track['artists'][0]['id'], 'artist_name':track['artists'][0]['name'],\n",
-    "                                     'linked_album':track['album']['name'], \n",
-    "                                     'album_release_date':track['album']['release_date'],\n",
-    "                                     'duration_ms':track['duration_ms'], 'explicit':track['explicit']})"
+    "    for entry in song_list:\n",
+    "        if isinstance(entry, dict):\n",
+    "            for track in entry['tracks']:\n",
+    "                master_song_list.append({'song_id':track['id'], 'song_title':track['name'],\n",
+    "                                         'artist_id':track['artists'][0]['id'], 'artist_name':track['artists'][0]['name'],\n",
+    "                                         'linked_album':track['album']['name'], \n",
+    "                                         'album_release_date':track['album']['release_date'],\n",
+    "                                         'duration_ms':track['duration_ms'], 'explicit':track['explicit']})\n",
+    "    return master_song_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "master_song_list = song_feat_pull(song_list)"
    ]
   },
   {
