--- a/notebooks/01b_collection_audio_feat.ipynb
+++ b/notebooks/01b_collection_audio_feat.ipynb
@@ -27,6 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from library import *\n",
+    "\n",
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -140,21 +142,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_feat = []\n",
-    "\n",
-    "for i in song_list:\n",
-    "    if isinstance(i, dict):\n",
-    "        id_list = []\n",
-    "        for k in i['tracks']:\n",
-    "            id_list.append(k['id'])\n",
-    "    else:\n",
-    "        continue\n",
-    "    try:\n",
-    "        song_feat.append(sp.audio_features(id_list))\n",
-    "        time.sleep(1)\n",
-    "    except:\n",
-    "        time.sleep(5)\n",
-    "        song_feat.append(sp.audio_features(id_list))"
+    "def get_song_feat(song_list):\n",
+    "    '''\n",
+    "    Retrieve audio features for every song in `song_list`.\n",
+    "    '''\n",
+    "    song_feat = []\n",
+    "    for i in song_list:\n",
+    "        if isinstance(i, dict):\n",
+    "            id_list = []\n",
+    "            for k in i['tracks']:\n",
+    "                id_list.append(k['id'])\n",
+    "        else:\n",
+    "            continue\n",
+    "        try:\n",
+    "            song_feat.append(sp.audio_features(id_list))\n",
+    "            time.sleep(1)\n",
+    "        except:\n",
+    "            time.sleep(5)\n",
+    "            song_feat.append(sp.audio_features(id_list))\n",
+    "    return song_feat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_feat = get_song_feat(song_list)"
    ]
   },
   {
@@ -203,16 +218,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in song_list:\n",
-    "    if isinstance(i, dict):\n",
-    "        for k in i['tracks']:\n",
-    "            try:\n",
-    "                analysis = sp.audio_analysis(k['id'])\n",
-    "            except:\n",
-    "                time.sleep(5)\n",
-    "                analysis = sp.audio_analysis(k['id'])\n",
-    "            with open('../data/audio_analysis/{}.json'.format(k['id']), 'w') as f:\n",
-    "                json.dump(analysis, f)"
+    "def get_aa(song_list):\n",
+    "    '''\n",
+    "    Retrieve audio analysis for every song in `song_list` and store each in separate .json file.\n",
+    "    '''\n",
+    "    count = 0\n",
+    "    for i in song_list:\n",
+    "        if isinstance(i, dict):\n",
+    "            for k in i['tracks']:\n",
+    "                try:\n",
+    "                    analysis = sp.audio_analysis(k['id'])\n",
+    "                except:\n",
+    "                    time.sleep(5)\n",
+    "                    analysis = sp.audio_analysis(k['id'])\n",
+    "                with open('../data/audio_analysis/{}.json'.format(k['id']), 'w') as f:\n",
+    "                    json.dump(analysis, f)\n",
+    "        count += 1\n",
+    "        if count % 5000 == 0:\n",
+    "            print('song {} finished'.format(count))\n",
+    "    print('finished')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_aa(song_list)"
    ]
   },
   {
@@ -374,12 +407,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master_song_list = []\n",
+    "def mk_msong_list(song_list):\n",
+    "    '''\n",
+    "    Retrieve `track_name` and `track_id` for each song and add to separate listing.\n",
+    "    '''\n",
+    "    master_song_list = []\n",
     "\n",
-    "for entry in song_list:\n",
-    "    if isinstance(entry, dict):\n",
-    "        for track in entry['tracks']:\n",
-    "            master_song_list.append(dict({track['name'] : track['id']}))"
+    "    for entry in song_list:\n",
+    "        if isinstance(entry, dict):\n",
+    "            for track in entry['tracks']:\n",
+    "                master_song_list.append(dict({track['name'] : track['id']}))\n",
+    "    return master_song_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "master_song_list = mk_msong_list(song_list)"
    ]
   },
   {
