--- a/notebooks/02_transforming_feats.ipynb
+++ b/notebooks/02_transforming_feats.ipynb
@@ -27,6 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from library import *\n",
+    "\n",
     "import csv\n",
     "import json\n",
     "import numpy as np\n",
@@ -712,11 +714,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "section_mean = pd.DataFrame(columns=['confidence', 'duration', 'loudness', 'mode',\n",
-    "                                    'mode_confidence', 'tempo', 'tempo_confidence'])\n",
+    "def get_sec_means(mean_dicts):\n",
+    "    '''\n",
+    "    Create df out of section means in `mean_dicts`.\n",
+    "    '''\n",
+    "    section_mean = pd.DataFrame(columns=['confidence', 'duration', 'loudness', 'mode',\n",
+    "                                        'mode_confidence', 'tempo', 'tempo_confidence'])\n",
     "\n",
-    "for e in mean_dicts:\n",
-    "    section_mean.loc[list(e.keys())[0]] = list(e.values())[0]"
+    "    for e in mean_dicts:\n",
+    "        section_mean.loc[list(e.keys())[0]] = list(e.values())[0]\n",
+    "    return section_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "section_mean = get_sec_means(mean_dicts)"
    ]
   },
   {
@@ -725,11 +741,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "section_var = pd.DataFrame(columns=['confidence', 'duration', 'loudness', 'mode',\n",
-    "                                    'mode_confidence', 'tempo', 'tempo_confidence'])\n",
+    "def get_sec_var(var_dicts):\n",
+    "    '''\n",
+    "    Create df out of section variances in `var_dicts`.\n",
+    "    '''\n",
+    "    section_var = pd.DataFrame(columns=['confidence', 'duration', 'loudness', 'mode',\n",
+    "                                        'mode_confidence', 'tempo', 'tempo_confidence'])\n",
     "\n",
-    "for e in var_dicts:\n",
-    "    section_var.loc[list(e.keys())[0]] = list(e.values())[0]"
+    "    for e in var_dicts:\n",
+    "        section_var.loc[list(e.keys())[0]] = list(e.values())[0]\n",
+    "    return section_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "section_var = get_sec_var(var_dicts)"
    ]
   },
   {
@@ -1749,11 +1779,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pt_grabber_sgl(song):\n",
+    "    '''\n",
+    "    Retrieve pitch and timbre summary statistics for specified song\n",
+    "    '''\n",
+    "    pitches = np.array(song['segments'][0]['pitches'])\n",
+    "    timbre = np.array(song['segments'][0]['timbre'])\n",
+    "    \n",
+    "    for record in song['segments']:\n",
+    "        new_pitch = np.array(record['pitches'])\n",
+    "        new_timbre = np.array(record['timbre'])\n",
+    "        pitches = np.vstack((pitches, new_pitch))\n",
+    "        timbre = np.vstack((timbre, new_timbre))\n",
+    "\n",
+    "    pitch_means = np.mean(pitches, axis = 0)\n",
+    "    timbre_means = np.mean(timbre, axis = 0)\n",
+    "    pitch_var = np.var(pitches, axis = 0)\n",
+    "    timbre_var = np.var(timbre, axis = 0)\n",
+    "\n",
+    "    return pitch_means, timbre_means, pitch_var, timbre_var"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pt_grabber(lst):\n",
+    "    '''\n",
+    "    Retrieves pitch and timbre summary statistics for every song in audio_analysis folder.\n",
+    "    '''\n",
     "    timbre_means = []\n",
     "    timbre_var = []\n",
     "    pitch_means = []\n",
@@ -1909,10 +1969,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def mk_sum_df(summary):\n",
+    "    '''\n",
+    "    Make df of summary stats for timbre/pitch values in audio analysis\n",
+    "    '''\n",
+    "    sum_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
+    "\n",
+    "    for e in summary:\n",
+    "        sum_df.loc[list(e.keys())[0]] = list(e.values())[0]\n",
+    "    return sum_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tm_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
     "\n",
     "for e in timbre_means:\n",
-    "    tm_df.loc[list(e.keys())[0]] = list(e.values())[0]"
+    "    tm_df.loc[list(e.keys())[0]] = list(e.values())[0]\n",
+    "return tm_df"
    ]
   },
   {
@@ -1924,7 +2002,8 @@
     "tv_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
     "\n",
     "for e in timbre_var:\n",
-    "    tv_df.loc[list(e.keys())[0]] = list(e.values())[0]"
+    "    tv_df.loc[list(e.keys())[0]] = list(e.values())[0]\n",
+    "return tv_df"
    ]
   },
   {
@@ -1947,8 +2026,20 @@
    "source": [
     "pv_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
     "\n",
-    "for e in pitch_means:\n",
+    "for e in pitch_var:\n",
     "    pv_df.loc[list(e.keys())[0]] = list(e.values())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tm_df = mk_sum_df(timbre_means)\n",
+    "tv_df = mk_sum_df(timbre_var)\n",
+    "pm_df = mk_sum_df(pitch_means)\n",
+    "pv_df = mk_sum_df(pitch_var)"
    ]
   },
   {
