--- a/notebooks/iv_alt_cosine.ipynb
+++ b/notebooks/iv_alt_cosine.ipynb
@@ -9,13 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('../pickle/svd_matrix.pkl', 'rb') as f:\n",
     "    svd_matrix = pickle.load(f)\n",
-    "svd_df = pd.read_csv('../data/svd_df.csv', index_col='song_id')"
+    "# svd_df = pd.read_csv('../data/svd_df.csv', index_col='song_id')"
    ]
   },
   {
@@ -50,6 +62,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main_song_list = pd.read_csv('../data/main_wfeats.csv', index_col='song_id')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -58,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +88,7 @@
        "(22891, 22891)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,11 +186,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feat_sim(song_id, k=10, cos_sim_mat=cos_sim_mat_g):\n",
+    "song_id_name = dict(zip(main_song_list.index, main_song_list['song_title']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_id_artist = dict(zip(main_song_list.index, main_song_list['artist_name']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Show Me Love - Radio Version'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_id_name['6SluaPiV04KOaRTOIScoff']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_cosine_id = dict(zip(main_song_list.index, range(main_song_list.shape[0])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "song_cosine_idr = dict(zip(range(main_song_list.shape[0]), main_song_list.index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8812"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_cosine_id['0s8OMEGJQJIUr9VFwNEH1v']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def feat_sim(song_id, k=10, cos_sim_mat=cos_sim_mat):\n",
     "    '''\n",
     "    Returns array of indices for top k songs with greatest similarity to given song, along with \n",
     "    their similarity rating, based on precomputed cosine similarity of feature vectors.\n",
@@ -192,11 +289,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def feat_sim_da(song_id, k=10, song_db=main_song_list, cos_sim_mat=cos_sim_mat_g):\n",
+    "def feat_sim_da(song_id, k=10, song_db=main_song_list, cos_sim_mat=cos_sim_mat):\n",
     "    '''\n",
     "    Returns array of indices for top k songs with greatest similarity to a given song, but only\n",
     "    from artists who didn't perform the given song, along with their similarity rating, \n",
@@ -221,11 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_recs(song_id, k=10, cos_sim_mat=cos_sim_mat_g):\n",
+    "def get_recs(song_id, k=10, cos_sim_mat=cos_sim_mat):\n",
     "    try:\n",
     "        top_songs_feat, top_songs_feat_sim = feat_sim(song_id, k, cos_sim_mat)\n",
     "        return pd.DataFrame([[song_id_name[song_cosine_idr[x]] for x in top_songs_feat],\n",
@@ -235,6 +332,156 @@
     "                        index=['Song Name', 'Artist', 'Song ID', 'Similarity']).T\n",
     "    except:\n",
     "        print('No results available for that id. Please refer to the Song Finder for a list of valid ids.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SVD All Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Song Name</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Song ID</th>\n",
+       "      <th>Similarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Be Mine!</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>3FtkFLmplS7GGPFMIQ0dSR</td>\n",
+       "      <td>0.978904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dancing On My Own - Radio Edit</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>7g13jf3zqlP5S68Voo5v9m</td>\n",
+       "      <td>0.97019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Honey - Single Edit</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>1N0rYVSziD8aPL1NRgsWz2</td>\n",
+       "      <td>0.964406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hang With Me</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>6rW8q1p2GCjGMRAlnxBeo7</td>\n",
+       "      <td>0.964115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Honey</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>4ieJSEFwhgIVJK97Rw4NkJ</td>\n",
+       "      <td>0.960998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Do You Know (What It Takes)</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>0idCpkJ2pspfAILbanmERu</td>\n",
+       "      <td>0.959374</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>With Every Heartbeat - with Kleerup</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>53SqGkNJAYLss9AgbduTqQ</td>\n",
+       "      <td>0.950063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Call Your Girlfriend</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>2sCoROOlNQyFpRQEe6A5lv</td>\n",
+       "      <td>0.943466</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Missing U</td>\n",
+       "      <td>Robyn</td>\n",
+       "      <td>4Sn5B44sLfQ364FUL98jvN</td>\n",
+       "      <td>0.93542</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Talking Body</td>\n",
+       "      <td>Tove Lo</td>\n",
+       "      <td>2tpfxAXiI52znho4WE3XFA</td>\n",
+       "      <td>0.893097</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Song Name   Artist                 Song ID  \\\n",
+       "0                             Be Mine!    Robyn  3FtkFLmplS7GGPFMIQ0dSR   \n",
+       "1       Dancing On My Own - Radio Edit    Robyn  7g13jf3zqlP5S68Voo5v9m   \n",
+       "2                  Honey - Single Edit    Robyn  1N0rYVSziD8aPL1NRgsWz2   \n",
+       "3                         Hang With Me    Robyn  6rW8q1p2GCjGMRAlnxBeo7   \n",
+       "4                                Honey    Robyn  4ieJSEFwhgIVJK97Rw4NkJ   \n",
+       "5          Do You Know (What It Takes)    Robyn  0idCpkJ2pspfAILbanmERu   \n",
+       "6  With Every Heartbeat - with Kleerup    Robyn  53SqGkNJAYLss9AgbduTqQ   \n",
+       "7                 Call Your Girlfriend    Robyn  2sCoROOlNQyFpRQEe6A5lv   \n",
+       "8                            Missing U    Robyn  4Sn5B44sLfQ364FUL98jvN   \n",
+       "9                         Talking Body  Tove Lo  2tpfxAXiI52znho4WE3XFA   \n",
+       "\n",
+       "  Similarity  \n",
+       "0   0.978904  \n",
+       "1    0.97019  \n",
+       "2   0.964406  \n",
+       "3   0.964115  \n",
+       "4   0.960998  \n",
+       "5   0.959374  \n",
+       "6   0.950063  \n",
+       "7   0.943466  \n",
+       "8    0.93542  \n",
+       "9   0.893097  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# \n",
+    "get_recs('6SluaPiV04KOaRTOIScoff', k=10, cos_sim_mat=cos_sim_mat)"
    ]
   },
   {
