--- a/notebooks/01b_collection_audio_feat.ipynb
+++ b/notebooks/01b_collection_audio_feat.ipynb
@@ -23,11 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library import *\n",
+    "from library import mk_msong_list\n",
     "\n",
     "import json\n",
     "import numpy as np\n",
@@ -49,12 +49,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"xXXXXXxxxXXXXXxxxxXXXxx\",\n",
-    "                                                          client_secret=\"xXXXXXxxxXXXXXxxxxXXXxx\")\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=\"2414300dd5be4a3cb0e9d83ecebe3964\",\n",
+    "                                                          client_secret=\"f9c2e12e1f0247a4a74cf8e821a69aa7\")\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,60 +383,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Bye Bye Bye'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "song_list[0]['tracks'][0]['name']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mk_msong_list(song_list):\n",
-    "    '''\n",
-    "    Retrieve `track_name` and `track_id` for each song and add to separate listing.\n",
-    "    '''\n",
-    "    master_song_list = []\n",
-    "\n",
-    "    for entry in song_list:\n",
-    "        if isinstance(entry, dict):\n",
-    "            for track in entry['tracks']:\n",
-    "                master_song_list.append(dict({track['name'] : track['id']}))\n",
-    "    return master_song_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master_song_list = mk_msong_list(song_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('../data/master_song_list.json', 'r') as f:\n",
-    "    master_song_list = json.load(f)"
+    "master_song_list = mk_msong_list.mk_msong_list(song_list)"
    ]
   },
   {
@@ -448,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +408,7 @@
        "23888"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,6 +452,16 @@
    "source": [
     "with open('../data/master_song_list.json', 'w+') as f:\n",
     "    json.dump(master_song_list, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../data/master_song_list.json', 'r') as f:\n",
+    "    master_song_list = json.load(f)"
    ]
   },
   {
