--- a/notebooks/02_transforming_feats.ipynb
+++ b/notebooks/02_transforming_feats.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library import *\n",
+    "from library import kc_counter\n",
     "\n",
     "import csv\n",
     "import json\n",
@@ -186,6 +186,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
@@ -221,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kc_list = kc_counter(analysis_list)"
+    "kc_list = kc_counter.kc_counter(analysis_list)"
    ]
   },
   {
