--- a/notebooks/01_collection.ipynb
+++ b/notebooks/01_collection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 01_Collection: Retrieving RIAA and Spotify Data for Analysis\n",
+    "## 01_Collection: Retrieving RIAA and Spotify Data for Analysis\n",
     "\n",
     "**Description**: Extracting data from the RIAA Gold and Platinum website, along with Spotify's API to serve as the dataset for this recommender system. \n",
     "\n",
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library import *\n",
+    "from library import song_feat_pull, genre_p_artist, genre_psong\n",
     "\n",
     "import csv\n",
     "import json\n",
@@ -40,6 +40,7 @@
     "import splinter\n",
     "import selenium\n",
     "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "from sqlalchemy import create_engine\n",
     "import time"
    ]
@@ -222,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +260,8 @@
       "text/plain": [
        "{'artists': {'href': 'https://api.spotify.com/v1/search?query=%27N+SYNC&type=artist&offset=0&limit=10',\n",
        "  'items': [{'external_urls': {'spotify': 'https://open.spotify.com/artist/6Ff53KvcvAj5U7Z1vojB5o'},\n",
-       "    'followers': {'href': None, 'total': 760828},\n",
-       "    'genres': ['boy band', 'dance pop', 'europop', 'pop', 'post-teen pop'],\n",
+       "    'followers': {'href': None, 'total': 768549},\n",
+       "    'genres': ['boy band', 'dance pop', 'pop', 'post-teen pop'],\n",
        "    'href': 'https://api.spotify.com/v1/artists/6Ff53KvcvAj5U7Z1vojB5o',\n",
        "    'id': '6Ff53KvcvAj5U7Z1vojB5o',\n",
        "    'images': [{'height': 1173,\n",
@@ -280,7 +281,7 @@
        "    'type': 'artist',\n",
        "    'uri': 'spotify:artist:6Ff53KvcvAj5U7Z1vojB5o'},\n",
        "   {'external_urls': {'spotify': 'https://open.spotify.com/artist/3WSOflN2YDXQTxEVClKvpS'},\n",
-       "    'followers': {'href': None, 'total': 1589},\n",
+       "    'followers': {'href': None, 'total': 1593},\n",
        "    'genres': [],\n",
        "    'href': 'https://api.spotify.com/v1/artists/3WSOflN2YDXQTxEVClKvpS',\n",
        "    'id': '3WSOflN2YDXQTxEVClKvpS',\n",
@@ -294,7 +295,7 @@
        "      'url': 'https://i.scdn.co/image/a5ffb62b3f7d74299b9a9b37163b4dbe6e611ba1',\n",
        "      'width': 64}],\n",
        "    'name': 'N-Sync',\n",
-       "    'popularity': 11,\n",
+       "    'popularity': 12,\n",
        "    'type': 'artist',\n",
        "    'uri': 'spotify:artist:3WSOflN2YDXQTxEVClKvpS'},\n",
        "   {'external_urls': {'spotify': 'https://open.spotify.com/artist/6siQVjH6hO8QqxfVrgpvkH'},\n",
@@ -322,7 +323,7 @@
        "  'total': 3}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,33 +344,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def conf_results(artist_list):\n",
-    "    '''\n",
-    "    Parses through spotify search results to retrieve the `artist_id` of the first \n",
-    "    result of each search.\n",
-    "    '''\n",
-    "    confident_list = []\n",
-    "    for artist in artist_list:\n",
-    "        results = sp.search(artist, type='artist')\n",
-    "        try:\n",
-    "            confident_list.append(results['artists']['items'][0])\n",
-    "        except:\n",
-    "            confident_list.append('no_results')\n",
-    "        time.sleep(1)\n",
-    "    return confident_list"
+    "with open('../pickle/artist_list_td.pkl', 'rb') as f:\n",
+    "    artist_list_td = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "confident_list = conf_results(artist_list_td)"
+    "confident_list = []\n",
+    "for artist in artist_list:\n",
+    "    results = sp.search(artist, type='artist')\n",
+    "    try:\n",
+    "        confident_list.append(results['artists']['items'][0])\n",
+    "    except:\n",
+    "        confident_list.append('no_results')\n",
+    "    time.sleep(1)"
    ]
   },
   {
@@ -509,6 +505,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../pickle/confident_list.pkl', 'rb') as f:\n",
+    "    confident_list = pickle.load(f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -517,28 +523,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def miss_art(conf_list):\n",
-    "    '''\n",
-    "    Iterate through `confident_list` for any artists that weren't retrieved during the lists' creation\n",
-    "    '''\n",
-    "    missing_artists = []\n",
-    "    for i in list(enumerate(confident_list)):\n",
-    "        if i[1] == 'no_results':\n",
-    "            missing_artists.append((i[0], artist_list_td[i[0]]))\n",
-    "    return missing_artists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "missing_artists = miss_art(confident_list)"
+    "missing_artists = []\n",
+    "for i in list(enumerate(confident_list)):\n",
+    "    if i[1] == 'no_results':\n",
+    "        missing_artists.append((i[0], artist_list_td[i[0]]))"
    ]
   },
   {
@@ -550,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +555,7 @@
        " (165, 'BABY AKA THE #1 STUNNA')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,6 +645,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../pickle/missing_artists.pkl', 'rb') as f:\n",
+    "    missing_artists = pickle.load(f)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -665,28 +667,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def found_art(missing_artists):\n",
-    "    '''\n",
-    "    Iterating through `missing_artists`, and retrieving artist information for each observation.\n",
-    "    '''\n",
-    "    found_artists = []\n",
-    "    for artist in missing_artists:\n",
-    "        artist_list = sp.search(artist[1], type='artist')\n",
-    "        try:\n",
-    "            found_artists.append(artist_list['artists']['items'][0])\n",
-    "        except:\n",
-    "            found_artists.append('no_results')\n",
-    "        time.sleep(0.5)\n",
-    "    return found_artists"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "found_artists = found_art(missing_artists)"
+    "found_artists = []\n",
+    "for artist in missing_artists:\n",
+    "    artist_list = sp.search(artist[1], type='artist')\n",
+    "    try:\n",
+    "        found_artists.append(artist_list['artists']['items'][0])\n",
+    "    except:\n",
+    "        found_artists.append('no_results')\n",
+    "    time.sleep(0.5)"
    ]
   },
   {
@@ -1443,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1893,28 +1881,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def top_10(artist_ids):\n",
-    "    '''\n",
-    "    Retrieves top 10 most popular tracks on Spotify for the artists specified in the `artist_ids` listing. \n",
-    "    '''\n",
-    "    top_10s = []\n",
-    "\n",
-    "    for aid in artist_ids:\n",
-    "        try:\n",
-    "            top_10s.append(sp.artist_top_tracks(aid))\n",
-    "        except:\n",
-    "            top_10s.append('no_results')\n",
-    "        time.sleep(1)\n",
-    "    return top_10s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_list = top_10(df['id'])"
+    "song_list = []\n",
+    "for aid in artist_ids:\n",
+    "    try:\n",
+    "        song_list.append(sp.artist_top_tracks(aid))\n",
+    "    except:\n",
+    "        song_list.append('no_results')\n",
+    "    time.sleep(1)"
    ]
   },
   {
@@ -1963,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,34 +1953,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def song_feat_pull(song_list):\n",
-    "    '''\n",
-    "    Pulls modeling features of songs and outputs them into a separate list.\n",
-    "    '''\n",
-    "    master_song_list = []\n",
-    "\n",
-    "    for entry in song_list:\n",
-    "        if isinstance(entry, dict):\n",
-    "            for track in entry['tracks']:\n",
-    "                master_song_list.append({'song_id':track['id'], 'song_title':track['name'],\n",
-    "                                         'artist_id':track['artists'][0]['id'], 'artist_name':track['artists'][0]['name'],\n",
-    "                                         'linked_album':track['album']['name'], \n",
-    "                                         'album_release_date':track['album']['release_date'],\n",
-    "                                         'duration_ms':track['duration_ms'], 'explicit':track['explicit']})\n",
-    "    return master_song_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master_song_list = song_feat_pull(song_list)"
+    "master_song_list = song_feat_pull.song_feat_pull(song_list)"
    ]
   },
   {
@@ -2030,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2039,14 +1989,14 @@
        "(759, 7)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/spotify_song_list.csv', index_col = 0)\n",
-    "df[df.duplicated()].sort_values('song_id').shape"
+    "df_2 = pd.read_csv('../data/spotify_song_list.csv', index_col = 0)\n",
+    "df_2[df_2.duplicated()].sort_values('song_id').shape"
    ]
   },
   {
@@ -2068,7 +2018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2081,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2040,7 @@
        "['boy band', 'dance pop', 'europop', 'pop', 'post-teen pop']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2108,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2134,7 @@
        "4  [boy band, dance pop, gangster rap, hip hop, h...  7urq0VfqxEYEEiZUkebXT4"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2197,9 +2147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dropping Non-Artists From `genre_per_artist`\n",
-    "\n",
-    "TK - Will need to define where I got this Non-Artist listing from"
+    "#### Dropping Non-Artists From `genre_per_artist`"
    ]
   },
   {
@@ -2253,11 +2201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Where does song_list_v2 come from?\n",
     "song_df = pd.read_csv('../data/song_list_v2.csv', index_col=0)"
    ]
   },
@@ -2314,29 +2261,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genre_p_artist(genres):\n",
-    "    '''\n",
-    "    Make artist to genre listing\n",
-    "    '''\n",
-    "    gdict_list = []\n",
-    "    \n",
-    "    for g_list, a_id  in genres.values:\n",
-    "        for genre in g_list:\n",
-    "            gdict_list.append((genre, a_id))\n",
-    "    return gdict_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genre_w_artists = genre_p_artist(genre_per_artist)"
+    "genre_w_artists = genre_p_artist.genre_p_artist(genre_per_artist)"
    ]
   },
   {
@@ -2348,28 +2277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genre_psong(genres, songs):\n",
-    "    gs_list = []\n",
-    "    count = 1\n",
-    "    for song, artist in songs[['s_song_id', 'artist_id']].values:\n",
-    "        for genre in genres:\n",
-    "            if artist == genre[1]:\n",
-    "                gs_list.append((count, song, genre[0], genre[1]))\n",
-    "                count += 1\n",
-    "    return gs_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genre_songs = genre_psong(genre_w_artists, song_df)"
+    "genre_songs = genre_psong.genre_psong(genre_w_artists, song_df)"
    ]
   },
   {
