--- a/notebooks/01_collection.ipynb
+++ b/notebooks/01_collection.ipynb
@@ -25,24 +25,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library import song_feat_pull, genre_p_artist, genre_psong\n",
-    "\n",
     "import csv\n",
     "import json\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import pickle\n",
     "import re\n",
+    "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import splinter\n",
-    "import selenium\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "from sqlalchemy import create_engine\n",
-    "import time"
+    "\n",
+    "from library import song_feat_pull, genre_p_artist, genre_psong"
    ]
   },
   {
