--- a/notebooks/01b_collection_audio_feat.ipynb
+++ b/notebooks/01b_collection_audio_feat.ipynb
@@ -23,21 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library import mk_msong_list\n",
-    "\n",
     "import json\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import pickle\n",
     "import re\n",
+    "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "import time\n",
-    "from sqlalchemy import create_engine"
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "from library import mk_msong_list"
    ]
   },
   {
@@ -53,8 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"2414300dd5be4a3cb0e9d83ecebe3964\",\n",
-    "                                                          client_secret=\"f9c2e12e1f0247a4a74cf8e821a69aa7\")\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=\"xXXXXXxxxXXXXXxxxxXXXxx\",\n",
+    "                                                          client_secret=\"xXXXXXxxxXXXXXxxxxXXXxx\")\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
