--- a/notebooks/02_transforming_feats.ipynb
+++ b/notebooks/02_transforming_feats.ipynb
@@ -27,14 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from library import kc_counter\n",
-    "\n",
     "import csv\n",
     "import json\n",
-    "import numpy as np\n",
     "import re\n",
+    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine"
+    "\n",
+    "from library import kc_counter, analysis_sorter, get_sec_ss, pt_grabber, pt_grabber_sgl, mk_sum_df"
    ]
   },
   {
@@ -182,44 +182,6 @@
     "### 1a. Counting Key Changes\n",
     "\n",
     "Given that there's an estimated key in each section of a song, I decided to capture this change by counting occurences that a key changed."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def kc_counter(lst):\n",
-    "    '''\n",
-    "    Return count of key changes throughout songs listed in individual json files\n",
-    "    lst = refers to .json song listing\n",
-    "    '''\n",
-    "    kc_list = []\n",
-    "    for record in lst:\n",
-    "        with open('../data/audio_analysis/{}'.format(record), 'r') as f:\n",
-    "            analysis = json.load(f)\n",
-    "            if isinstance(analysis, dict):\n",
-    "                if 'sections' in analysis:\n",
-    "                    try:\n",
-    "                        start_key = analysis['sections'][0]['key']\n",
-    "                        kc = 0\n",
-    "                        for item in analysis['sections']:\n",
-    "                            cur_key = item['key']\n",
-    "                            if cur_key != start_key:\n",
-    "                                start_key = cur_key\n",
-    "                                kc += 1\n",
-    "                        kc_list.append(dict({record.replace('.json', ''):kc}))\n",
-    "                    except:\n",
-    "                        kc_list.append(dict({record.replace('.json', ''): 'unable to record key changes'}))\n",
-    "    return kc_list"
    ]
   },
   {
@@ -487,60 +449,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def analysis_sorter(lst):\n",
-    "    '''\n",
-    "    Iterate through individual song .json files for sections, and calculate the mean and variance for \n",
-    "    'confidence', 'duration', 'loudness', 'mode', 'mode_confidence', 'tempo', and 'tempo_confidence' values. \n",
-    "    \n",
-    "    Returns two lists of dictionaries, one containing each song's section mean values, the other containing \n",
-    "    each song's section variance values.\n",
-    "    '''\n",
-    "    mean_dicts = []\n",
-    "    var_dicts = []\n",
-    "    count = 0\n",
-    "    for record in lst:\n",
-    "        with open('../data/audio_analysis/{}'.format(record), 'r') as f:\n",
-    "            analysis = json.load(f)\n",
-    "            if isinstance(analysis, dict):\n",
-    "                if 'sections' in analysis:\n",
-    "                    try:\n",
-    "                        mean_dict = {}\n",
-    "                        var_dict = {}\n",
-    "                        df = pd.DataFrame(analysis['sections'])\n",
-    "                        mean = df[['confidence', 'duration', 'loudness', 'mode', 'mode_confidence',\n",
-    "                                   'tempo', 'tempo_confidence']].mean().to_dict()\n",
-    "                        var = df[['confidence', 'duration', 'loudness', 'mode', 'mode_confidence',\n",
-    "                                   'tempo', 'tempo_confidence']].var().to_dict()\n",
-    "                        mean_dict[record.replace('.json', '')] = mean\n",
-    "                        var_dict[record.replace('.json', '')] = var\n",
-    "                        mean_dicts.append(mean_dict)\n",
-    "                        var_dicts.append(var_dict)\n",
-    "                    except:\n",
-    "                        mean_dict = {}\n",
-    "                        var_dict = {}\n",
-    "                        mean_dict[(record.replace('.json',''))] = 'Unable to calculate mean of section features'\n",
-    "                        var_dict[(record.replace('.json',''))] = 'Unable to calculate variance of section features'\n",
-    "                        mean_dicts.append(mean_dict)\n",
-    "                        var_dicts.append(var_dict)\n",
-    "            count += 1\n",
-    "            if count % 5000 == 0:\n",
-    "                print(\"Completed {} files\".format(count))\n",
-    "            if count % 5000 == 0:\n",
-    "                with open('../data/section_var_summary_{}.json'.format(count), 'w') as f:\n",
-    "                    json.dump(var_dicts, f)\n",
-    "                    var_dicts.clear()\n",
-    "                with open('../data/section_mean_summary_{}.json'.format(count), 'w') as f:\n",
-    "                    json.dump(mean_dicts, f)\n",
-    "                    mean_dicts.clear()\n",
-    "    return mean_dicts, var_dicts"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 177,
    "metadata": {},
    "outputs": [
@@ -556,7 +464,7 @@
     }
    ],
    "source": [
-    "mean_dicts, var_dicts = analysis_sorter(analysis_list)"
+    "mean_dicts, var_dicts = analysis_sorter.analysis_sorter(analysis_list)"
    ]
   },
   {
@@ -717,20 +625,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_sec_means(mean_dicts):\n",
-    "    '''\n",
-    "    Create df out of section means in `mean_dicts`.\n",
-    "    '''\n",
-    "    section_mean = pd.DataFrame(columns=['confidence', 'duration', 'loudness', 'mode',\n",
-    "                                        'mode_confidence', 'tempo', 'tempo_confidence'])\n",
-    "\n",
-    "    for e in mean_dicts:\n",
-    "        section_mean.loc[list(e.keys())[0]] = list(e.values())[0]\n",
-    "    return section_mean"
+    "section_mean = get_sec_ss.get_sec_ss(mean_dicts)"
    ]
   },
   {
@@ -739,34 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "section_mean = get_sec_means(mean_dicts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 201,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_sec_var(var_dicts):\n",
-    "    '''\n",
-    "    Create df out of section variances in `var_dicts`.\n",
-    "    '''\n",
-    "    section_var = pd.DataFrame(columns=['confidence', 'duration', 'loudness', 'mode',\n",
-    "                                        'mode_confidence', 'tempo', 'tempo_confidence'])\n",
-    "\n",
-    "    for e in var_dicts:\n",
-    "        section_var.loc[list(e.keys())[0]] = list(e.values())[0]\n",
-    "    return section_var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "section_var = get_sec_var(var_dicts)"
+    "section_var = get_sec_ss.get_sec_ss(var_dicts)"
    ]
   },
   {
@@ -1772,7 +1644,7 @@
     "\n",
     "Each segment represents a uniform element of sound, typically under 1 second (e.g., if one was listening to a piano piece, for instance, a segment could represent a single chord being played). Each segment is characterized by their perceptual onsets and duration in seconds, loudness, pitch and timbral content [(Mark Koh)](https://www.youtube.com/watch?v=goUzHd7cTuA&feature=youtu.be).\n",
     "\n",
-    "There is a variable number of segments in a given song, which makes it difficult to use for calculating similarity. The calculations should be time invariant. Therefore, I decided to take the mean and variance of each `Timbre` and `Pitch` value (please refer to the data dictionary for more information on each).I separated `pitches` and `timbre` into separate matrices, considering I need to get the mean and variance of each element within each of those arrays. \n",
+    "There is a variable number of segments in a given song, which makes it difficult to use for calculating similarity. The calculations should be time invariant. Therefore, I decided to take the mean and variance of each `Timbre` and `Pitch` value (please refer to the data dictionary for more information on each). I separated `pitches` and `timbre` into separate matrices, considering I need to get the mean and variance of each element within each of those arrays. \n",
     "\n",
     "I did not store any other values from the audio segments. Reason being, that I wasn't overly concered with the length of each segment, nor was I concerned with the loundess levels, since they're referred to within the `Sections` and audio features."
    ]
@@ -1782,71 +1654,6 @@
    "metadata": {},
    "source": [
     "### 2a. Creating Functions to Grab Summary Pitch and Timbre Statistics for Each Song"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pt_grabber_sgl(song):\n",
-    "    '''\n",
-    "    Retrieve pitch and timbre summary statistics for specified song\n",
-    "    '''\n",
-    "    pitches = np.array(song['segments'][0]['pitches'])\n",
-    "    timbre = np.array(song['segments'][0]['timbre'])\n",
-    "    \n",
-    "    for record in song['segments']:\n",
-    "        new_pitch = np.array(record['pitches'])\n",
-    "        new_timbre = np.array(record['timbre'])\n",
-    "        pitches = np.vstack((pitches, new_pitch))\n",
-    "        timbre = np.vstack((timbre, new_timbre))\n",
-    "\n",
-    "    pitch_means = np.mean(pitches, axis = 0)\n",
-    "    timbre_means = np.mean(timbre, axis = 0)\n",
-    "    pitch_var = np.var(pitches, axis = 0)\n",
-    "    timbre_var = np.var(timbre, axis = 0)\n",
-    "\n",
-    "    return pitch_means, timbre_means, pitch_var, timbre_var"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pt_grabber(lst):\n",
-    "    '''\n",
-    "    Retrieves pitch and timbre summary statistics for every song in audio_analysis folder.\n",
-    "    '''\n",
-    "    timbre_means = []\n",
-    "    timbre_var = []\n",
-    "    pitch_means = []\n",
-    "    pitch_var = []\n",
-    "    count = 0\n",
-    "    for record in lst:\n",
-    "        with open('../data/audio_analysis/{}'.format(record), 'r') as f:\n",
-    "            analysis = json.load(f)\n",
-    "            if isinstance(analysis, dict):\n",
-    "                if 'segments' in analysis:\n",
-    "                    try:\n",
-    "                        pm, tm, pv, tv = pt_grabber_sgl(analysis)\n",
-    "                    except:\n",
-    "                        response = \"unable to gather summary stats for song {} pitch & timbre\".format(record.replace(\".json\", ''))\n",
-    "        try:\n",
-    "            timbre_means.append(dict({record.replace(\".json\", \"\"):tm}))\n",
-    "            timbre_var.append(dict({record.replace(\".json\", \"\"):tv}))\n",
-    "            pitch_means.append(dict({record.replace(\".json\", \"\"):pm}))\n",
-    "            pitch_var.append(dict({record.replace(\".json\", \"\"):pv}))\n",
-    "        except:\n",
-    "            [lists.append(response) for lists in [timbre_means, timbre_var, \n",
-    "                                                  pitch_means, pitch_var]]\n",
-    "        count += 1\n",
-    "        if count % 1000 == 0:\n",
-    "            print(\"grabbing {}\".format(count + 1))\n",
-    "    return timbre_means, timbre_var, pitch_means, pitch_var"
    ]
   },
   {
@@ -1892,7 +1699,7 @@
     }
    ],
    "source": [
-    "timbre_means, timbre_var, pitch_means, pitch_var = pt_grabber(analysis_list)"
+    "timbre_means, timbre_var, pitch_means, pitch_var = pt_grabber.pt_grabber(analysis_list)"
    ]
   },
   {
@@ -1972,81 +1779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mk_sum_df(summary):\n",
-    "    '''\n",
-    "    Make df of summary stats for timbre/pitch values in audio analysis\n",
-    "    '''\n",
-    "    sum_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
-    "\n",
-    "    for e in summary:\n",
-    "        sum_df.loc[list(e.keys())[0]] = list(e.values())[0]\n",
-    "    return sum_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tm_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
-    "\n",
-    "for e in timbre_means:\n",
-    "    tm_df.loc[list(e.keys())[0]] = list(e.values())[0]\n",
-    "return tm_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tv_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
-    "\n",
-    "for e in timbre_var:\n",
-    "    tv_df.loc[list(e.keys())[0]] = list(e.values())[0]\n",
-    "return tv_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 159,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pm_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
-    "\n",
-    "for e in pitch_means:\n",
-    "    pm_df.loc[list(e.keys())[0]] = list(e.values())[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pv_df = pd.DataFrame(columns=[\"dim_\" + str(i) for i in range(1, 13)])\n",
-    "\n",
-    "for e in pitch_var:\n",
-    "    pv_df.loc[list(e.keys())[0]] = list(e.values())[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tm_df = mk_sum_df(timbre_means)\n",
-    "tv_df = mk_sum_df(timbre_var)\n",
-    "pm_df = mk_sum_df(pitch_means)\n",
-    "pv_df = mk_sum_df(pitch_var)"
+    "tm_df = mk_sum_df.mk_sum_df(timbre_means)\n",
+    "tv_df = mk_sum_df.mk_sum_df(timbre_var)\n",
+    "pm_df = mk_sum_df.mk_sum_df(pitch_means)\n",
+    "pv_df = mk_sum_df.mk_sum_df(pitch_var)"
    ]
   },
   {
