--- a/notebooks/04_preprocessing.ipynb
+++ b/notebooks/04_preprocessing.ipynb
@@ -27,18 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import pickle\n",
     "import re\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "from sklearn.decomposition import TruncatedSVD, NMF\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
