slight updates to funcs

--- a/notebooks/05_cosine.ipynb
+++ b/notebooks/05_cosine.ipynb
@@ -144,6 +144,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Saving matrix as a .npy file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../pickle/cos_sim_mat_g.npy', 'wb') as f:\n",
+    "    np.save(f, cos_sim_mat_g)   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2b. Creating a Series of `dicts` for Lookup"
    ]
   },
