adding jj branch

--- a/notebooks/01b_collection_audio_feat.ipynb
+++ b/notebooks/01b_collection_audio_feat.ipynb
@@ -28,6 +28,7 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
     "import pickle\n",
     "import re\n",
     "import time\n",
@@ -39,15 +40,10 @@
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
     "from sqlalchemy import create_engine\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "load_dotenv(find_dotenv())\n",
     "\n",
     "from library import mk_msong_list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Disclaimer:** Client Credentials are listed for illustrative purposes only. You will not be able to replicate the information contained here without actual API access credentials."
    ]
   },
   {
@@ -56,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"xXXXXXxxxXXXXXxxxxXXXxx\",\n",
-    "                                                          client_secret=\"xXXXXXxxxXXXXXxxxxXXXxx\")\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=os.getenv('S_CLIENT_ID'),\n",
+    "                                                          client_secret=os.getenv('S_CLIENT_SECRET'))\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
@@ -302,9 +298,7 @@
    "source": [
     "#### Connecting to PostgreSQL to Retreive Song Listing\n",
     "\n",
-    "For ease of access anywhere, I established a PostgreSQL database, where I've been storing all of the tables created during the data collection process\n",
-    "\n",
-    "**Disclaimer**: The credentials listed are for illustrative purposes only. Please reach out if you'd like to connect to this database."
+    "For ease of access anywhere, I established a PostgreSQL database, where I've been storing all of the tables created during the data collection process"
    ]
   },
   {
@@ -324,7 +318,7 @@
     }
    ],
    "source": [
-    "engine = create_engine('postgresql://postgres:xxxxXXXXXxxxx@xxxxxxxxxus-west-2.compute.amazonaws.com:5432/postgres')\n",
+    "engine = create_engine(os.getenv('DATABASE_URL'))\n",
     "engine.connect()"
    ]
   },
