--- a/notebooks/04_preprocessing.ipynb
+++ b/notebooks/04_preprocessing.ipynb
@@ -1251,7 +1251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I decided to grab the heighest weighted features of the first 6 components, to plot those genres against other song features, to get an idea of how the most similar song titles are clustered (in `06_feat_relationships`)."
+    "I decided to grab the heighest weighted features of the first 6 components, to plot those genres against other song features, to get an idea of how the most similar song titles are clustered (in `i_feat_relationships`)."
    ]
   },
   {
