--- a/notebooks/musicbrainz.ipynb
+++ b/notebooks/musicbrainz.ipynb
@@ -4,17 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ii_supplemental_EDA: Additional Feature Plots\n",
+    "# Musicbrainz API Through `musicbrainzngs`\n",
     "\n",
-    "**Description**: These are plots that I thought were helpful to view the relationship with different features in my dataset, but not required to look at in the context of the technical report."
+    "Using the python library `musicbrainzngs` to access the Musicbrainz API in order to retrieve song credits."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# !pip install musicbrainzngs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import musicbrainzngs as mb\n",
+    "import pickle"
+   ]
   }
  ],
  "metadata": {
