--- a/notebooks/01_collection.ipynb
+++ b/notebooks/01_collection.ipynb
@@ -31,6 +31,7 @@
    "source": [
     "import csv\n",
     "import json\n",
+    "import os\n",
     "import pickle\n",
     "import re\n",
     "import time\n",
@@ -41,6 +42,9 @@
     "import splinter\n",
     "import spotipy\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
+    "load_dotenv(find_dotenv())\n",
     "\n",
     "from library import song_feat_pull, genre_p_artist, genre_psong"
    ]
@@ -216,9 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2a. Logging Into Spotify\n",
-    "\n",
-    "**Disclaimer:** Client Credentials are listed for illustrative purposes only. You will not be able to replicate the information contained here without actual API access credentials."
+    "### 2a. Logging Into Spotify\n"
    ]
   },
   {
@@ -227,8 +229,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_credentials_manager = SpotifyClientCredentials(client_id=\"xXXXXXxxxXXXXXxxxxXXXxx\",\n",
-    "                                                      client_secret=\"xXXXXXxxxXXXXXxxxxXXXxx\")\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id=os.getenv('S_CLIENT_ID'),\n",
+    "                                                      client_secret=os.getenv('S_CLIENT_SECRET'))\n",
     "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)"
    ]
   },
